Java level fixes